png instead of pdf to remove type 1 fonts

--- a/sigmod2022.tex
+++ b/sigmod2022.tex
@@ -323,7 +323,7 @@ We provide the source code for all the experiments on public datasets described 
 }
 
 \begin{figure*}[htbp]
-  \includegraphics[width=\linewidth]{figures/CoLES.pdf}
+  \includegraphics[width=\linewidth]{figures/coles.png}
     \caption{
         General framework.
         %
