Update on Overleaf.

--- a/sigmod2022.tex
+++ b/sigmod2022.tex
@@ -316,11 +316,7 @@ outperforms several strong baselines including previously proposed contrastive l
 adapted to event sequence datasets. Section~\ref{sec-conclusions} is dedicated to the discussion
 of our results and conclusions.
 % 
-We provide the source code for all the experiments on public datasets described in this paper.\footnote{
-    % https://github.com/sberbank-ai-lab/coles-paper
-    \url{https://gitfront.io/r/user-4095364/b5e7aa508a55594f713b4363cb2e982f8a367974/coles/}
-    (the link was anonymized for the blind peer review purposes)
-}
+We provide the source code for all the experiments on public datasets described in this paper.\footnote{https://github.com/sberbank-ai-lab/coles-paper}
 
 \begin{figure*}[htbp]
   \includegraphics[width=\linewidth]{figures/coles.png}
