--- a/sigmod2022.tex
+++ b/sigmod2022.tex
@@ -319,7 +319,7 @@ of our results and conclusions.
 We provide the source code for all the experiments on public datasets described in this paper.\footnote{https://github.com/sberbank-ai-lab/coles-paper}
 
 \begin{figure*}[htbp]
-  \includegraphics[width=\linewidth]{figures/coles.png}
+  \includegraphics[width=0.98\linewidth]{figures/coles.png}
     \caption{
         General framework.
         %
