repo location fix

--- a/sigmod2022.tex
+++ b/sigmod2022.tex
@@ -316,7 +316,7 @@ outperforms several strong baselines including previously proposed contrastive l
 adapted to event sequence datasets. Section~\ref{sec-conclusions} is dedicated to the discussion
 of our results and conclusions.
 % 
-We provide the source code for all the experiments on public datasets described in this paper.\footnote{https://github.com/sberbank-ai-lab/coles-paper}
+We provide the source code for all the experiments on public datasets described in this paper.\footnote{https://github.com/dllllb/coles-paper}
 
 \begin{figure*}[htbp]
   \includegraphics[width=0.98\linewidth]{figures/coles.png}
